--- a/Chart/Chart.vcxproj.filters
+++ b/Chart/Chart.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="GeneratedFiles\qrc_Chart.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="NodeDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="Chart.h">
@@ -65,6 +68,9 @@
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_Chart.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NodeDialog.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
